@@ -1,3 +1,9 @@
+2006-02-16  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py:  Provide an option to not traceback if an
+	included file is not present.  This should have very limited
+	usefulness.  (#181760).
+
 2006-02-13  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  Bump version.
